--- a/plugins/osu_events/osu_events.css
+++ b/plugins/osu_events/osu_events.css
@@ -50,6 +50,17 @@
   float: left;
   width: 66px;
   text-align: center;
+  background: #fcfcfc;
+	background: linear-gradient(top, #fcfcfc 0%,#dad8d8 100%);
+	background: -moz-linear-gradient(top, #fcfcfc 0%, #dad8d8 100%);
+	background: -webkit-linear-gradient(top, #fcfcfc 0%,#dad8d8 100%);
+	border: 1px solid #d2d2d2;
+	border-radius: 10px;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
+	-moz-box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
+	-webkit-box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
 }
 
 #live-feeds .calendar-item .date.calendar .day {
@@ -65,6 +76,10 @@
   font-size: 1.05em;
   border-radius: 3px 3px 0 0;
   text-transform: uppercase;
+  background: linear-gradient(top, #C34500 0%, #7a0909 100%);
+	background: -moz-linear-gradient(top, #C34500 0%, #7a0909 100%);
+	background: -webkit-linear-gradient(top, #C34500 0%, #7a0909 100%);
+
 }
 
 #live-feeds .calendar-item .date.calendar .day-year {
@@ -75,7 +90,7 @@
 
 #live-feeds .calendar-item .date.calendar .year {
   color: #393939;
-  font-size: 1.1em;
+  font-size: .9em;
   margin-top: 2px;
 }
 
