--- a/plugins/osu_announcements/osu_announcements.css
+++ b/plugins/osu_announcements/osu_announcements.css
@@ -1,19 +1,3 @@
-#live-feeds .news-item {
-  border-bottom: 1px dotted #888888;
-  clear: both;
-  margin-bottom: 1.5em;
-  overflow: auto;
-  padding-bottom: 1em;
-}
-
-#live-feeds .news-item  h3.title {
-  color: #000000;;
-  display: inline;
-  font-size: 0.93em;
-  margin: 0;
-  padding: 0;
-}
-
 #live-feeds .news-item img {
     clear: left;
     float: left;
@@ -21,17 +5,15 @@
 }
 
 
-#live-feeds .news-item .date
-{
+#live-feeds .news-item .date{
 	color: #565656;
 	display: inline;
 	font-size: 0.93em;
 	font-style: italic;
-	text-wrap: ;
 	white-space: nowrap;
 }
 
 #live-feeds .news-item .news-body {
   margin-top: .2em;
-  font-size: 0.93em;
+  margin-left: 84px;
 }
