re #20254: feeds update, css3 selectors for bottom rows

--- a/plugins/osu_events/osu_events.css
+++ b/plugins/osu_events/osu_events.css
@@ -12,6 +12,10 @@
   padding-bottom: 0.9em;
 }
 
+#live-feeds > .calendar-item:last-of-type {
+  border-bottom: none;
+}
+
 #live-feeds .calendar-item p.title {
   display: block;
 }
