--- a/plugins/osu_announcements/osu_announcements.css
+++ b/plugins/osu_announcements/osu_announcements.css
@@ -1,11 +1,11 @@
-#live-feeds .news-item img {
+.live-feeds-block .news-item img {
     clear: left;
     float: left;
     margin-right: 10px;
 }
 
 
-#live-feeds .news-item .date{
+.live-feeds-block .news-item .date{
 	color: #565656;
 	display: inline;
 	font-size: 0.93em;
@@ -13,6 +13,6 @@
 	white-space: nowrap;
 }
 
-#live-feeds .news-item .news-body {
+.live-feeds-block .news-item .news-body {
   margin-top: .2em;
 }
