--- a/plugins/osu_events/osu_events.css
+++ b/plugins/osu_events/osu_events.css
@@ -4,7 +4,7 @@
  */
 
 
-#live-feeds .calendar-item {
+.live-feeds-block .calendar-item {
   border-bottom: 1px dotted #ccc;
   clear: both;
   margin-bottom: 1.4em;
@@ -12,57 +12,57 @@
   padding-bottom: 0.9em;
 }
 
-#live-feeds > .calendar-item:last-of-type {
+.live-feeds-block > .calendar-item:last-of-type {
   border-bottom: none;
 }
 
-#live-feeds .calendar-item p.title {
+.live-feeds-block .calendar-item p.title {
   display: block;
 }
 
 /* The classic date style */
-#live-feeds .calendar-item .date.classic {
+.live-feeds-block .calendar-item .date.classic {
   float: left;
   margin-right: 0.385em;
 }
 
-#live-feeds .calendar-item .date.classic span {
+.live-feeds-block .calendar-item .date.classic span {
   display: block;
   font-weight: bold;
   margin-top: -0.2em;
 }
-#live-feeds .calendar-item .date.classic .day {
+.live-feeds-block .calendar-item .date.classic .day {
   color: #949494;
   font-size: 2.77em;
 }
 
-#live-feeds .calendar-item .date.classic .month {
+.live-feeds-block .calendar-item .date.classic .month {
   color: #C34500;
   font-size: 1.5em;
   margin-top: -0.5em;
 }
 
-#live-feeds .calendar-item .date.classic .year {
+.live-feeds-block .calendar-item .date.classic .year {
   color: #393939;
   font-size: 1.2em;
   margin-top: -0.12em;
 }
 
 /* The new calendar date style */
-#live-feeds .calendar-item .date.calendar {
+.live-feeds-block .calendar-item .date.calendar {
   float: left;
   width: 66px;
   text-align: center;
 }
 
-#live-feeds .calendar-item .date.calendar .day {
+.live-feeds-block .calendar-item .date.calendar .day {
   color: #c34500;
   font-size: 2em;
   font-weight: bold;
   margin-top: 4px;
 }
 
-#live-feeds .calendar-item .date.calendar .month {
+.live-feeds-block .calendar-item .date.calendar .month {
   color: #fff;
   background-color: #444;
   font-size: 1.05em;
@@ -70,22 +70,22 @@
   text-transform: uppercase;
 }
 
-#live-feeds .calendar-item .date.calendar .day-year {
+.live-feeds-block .calendar-item .date.calendar .day-year {
   border-radius: 0 0 3px 3px;
   background-color: #f2f2f2;
   border: 1px solid #ccc;
 }
 
-#live-feeds .calendar-item .date.calendar .year {
+.live-feeds-block .calendar-item .date.calendar .year {
   color: #393939;
   font-size: 1.1em;
   margin-top: 2px;
 }
 
-#live-feeds .calendar-item .description {
+.live-feeds-block .calendar-item .description {
   margin-left: 80px;
 }
 
-#live-feeds .calendar-item .description p.title {
+.live-feeds-block .calendar-item .description p.title {
   margin-bottom: 5px;
 }
