--- a/plugins/osu_wordpress/osu_wordpress.css
+++ b/plugins/osu_wordpress/osu_wordpress.css
@@ -2,15 +2,15 @@
  * @file osu_wordpress.css
  *  Provide style for the OSU Events plugin for the Feeds Display module
  */
- 
-#live-feeds .news-item img {
+
+.live-feeds-block .news-item img {
     clear: left;
     float: left;
     margin-right: 10px;
 }
 
 
-#live-feeds .news-item .date
+.live-feeds-block .news-item .date
 {
 	color: #565656;
 	display: inline;
@@ -20,8 +20,8 @@
 	white-space: nowrap;
 }
 
-#live-feeds .news-item .news-body {
+.live-feeds-block .news-item .news-body {
   margin-top: .2em;
   font-size: 0.93em;
 }
- 
+
