re #19960: accessibility updates to rss feed links, titles, abbreviation for months and more

--- a/plugins/osu_events/osu_events.css
+++ b/plugins/osu_events/osu_events.css
@@ -39,6 +39,11 @@
   margin-top: -0.12em;
 }
 
+.live-feeds-block abbr[title] { /* for accessibile, dates */
+  border-bottom: none;
+  cursor: default;
+}
+
 /* The new calendar date style */
 .live-feeds-block .calendar-item .date.calendar {
   float: left;
