re #21913: testing new version of rss and others news and events

--- a/plugins/osu_events/osu_events.css
+++ b/plugins/osu_events/osu_events.css
@@ -4,7 +4,7 @@
  */
 
 .live-feeds-block .calendar-item {
-  border-bottom: 1px dotted #999;
+  border-bottom: 1px dotted #f00;
   clear: both;
   margin-bottom: 1.4em;
   overflow: hidden;
