Adding a gap between title in Calendar title
re #26476

--- a/live_feeds.css
+++ b/live_feeds.css
@@ -148,6 +148,10 @@
   text-transform: none;
 }
 
+.live-feeds-block .calendar-item p.title {
+  display: block;
+}
+
 .live-feeds-block .news-item  h3.title,
 .live-feeds-block .calendar-item .description,
 .live-feeds-block .calendar-item .description p.title,
