RSS icons now fixed for logged out users
re #27324

--- a/live_feeds.css
+++ b/live_feeds.css
@@ -2,6 +2,10 @@
   clear: both;
 }
 
+.block-live-feeds {
+  position: relative;
+}
+
 .block-live-feeds h2 {
   background: #373737;
   color: #fff;
