--- a/plugins/gcal_feed/gcal_feed.css
+++ b/plugins/gcal_feed/gcal_feed.css
@@ -3,18 +3,14 @@
  *  Provide style for the OSU Events plugin for the Feeds Display module
  */
 
-
-/*
 .live-feeds-block .calendar-item {
-  border-bottom: 1px dotted #999;
   clear: both;
   margin-bottom: 1.4em;
   overflow: hidden;
   padding-bottom: 0.5em;
 }
-*/
+
 /* The classic date style */
-/*
 .live-feeds-block .calendar-item .date.classic {
   float: left;
   margin-right: 0.385em;
@@ -23,27 +19,35 @@
 .live-feeds-block .calendar-item .date.classic span {
   display: block;
   font-weight: bold;
-  margin-top: -0.2em;
+  margin-top: .2em;
 }
 .live-feeds-block .calendar-item .date.classic .day {
-  color: #949494;
-  font-size: 2.77em;
+  color: #c34500;
+  font-size: 34px;
 }
 
 .live-feeds-block .calendar-item .date.classic .month {
-  color: #C34500;
-  font-size: 1.5em;
-  margin-top: -0.5em;
+  color: #949494;
+  font-size: 20px;
+  text-transform: uppercase;
 }
 
 .live-feeds-block .calendar-item .date.classic .year {
   color: #393939;
-  font-size: 1.2em;
-  margin-top: -0.12em;
+  font-size: 16px;
+  margin-top: -4px;
 }
-*/
+
+.live-feeds-block abbr[title] { /* for accessibile, dates */
+  border-bottom: none;
+  cursor: default;
+}
+
+.live-feeds-block .calendar-item .classic + .description {
+  margin-left: 60px;
+}
+
 /* The new calendar date style */
-/*
 .live-feeds-block .calendar-item .date.calendar {
   float: left;
   width: 66px;
@@ -51,31 +55,29 @@
 }
 
 .live-feeds-block .calendar-item .date.calendar .day {
-  color: #c34500;
-  font-size: 2.5em;
+  color: #373737;
+  font-size: 2em;
   font-weight: bold;
-  margin-top: -2px;
+  padding-top: 4px;
 }
 
 .live-feeds-block .calendar-item .date.calendar .month {
   color: #fff;
-  background-color: #444;
+  background-color: #c34500;
   font-size: 1.05em;
   border-radius: 3px 3px 0 0;
   text-transform: uppercase;
 }
 
 .live-feeds-block .calendar-item .date.calendar .day-year {
-  margin-top: 2px;
   border-radius: 0 0 3px 3px;
   background-color: #f2f2f2;
-  border: 1px solid #ccc;
 }
 
 .live-feeds-block .calendar-item .date.calendar .year {
-  color: #393939;
+  color: #373737;
   font-size: 1.1em;
-  margin: -5px 0 3px;
+  margin-top: 2px;
 }
 
 .live-feeds-block .calendar-item .description {
@@ -86,16 +88,4 @@
   text-decoration: none;
 }
 
-.live-feeds-block .rss-icon {
-  background: url(rss-icon-new.png) top right no-repeat;
-  min-height: 16px;
-  min-width: 16px;
-  margin: -36px 4px 0 0;
-}
-
-.live-feeds-block .rss-icon img {
-  display: none;
-}
-
-*/
 
