re #30940: removing dotted line for dates/ABBR tag in Firefox

--- a/plugins/gcal_feed/gcal_feed.css
+++ b/plugins/gcal_feed/gcal_feed.css
@@ -40,6 +40,7 @@
 
 .live-feeds-block .calendar-item.gcal-feed abbr[title] { /* for accessibile, dates */
   border-bottom: none;
+  text-decoration: none;
   cursor: auto;
 }
 
