--- a/css/live_feeds_news.css
+++ b/css/live_feeds_news.css
@@ -3,29 +3,32 @@
  *  Provide style for the News plugin for the Live Feeds module.
  */
 
-.live-feeds-block .news-item {
-  border-bottom: 1px dotted #888888;
-  clear: both;
+.live-feeds-news .news-item {
+  border-bottom: 1px dotted #888;
   margin-bottom: 1.5em;
   overflow: auto;
   padding-bottom: 1em;
 }
+.live-feeds-news .news-item:last-child {
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
 
-.live-feeds-block .news-item h3.title {
-  color: #000000;
+.live-feeds-news .news-item h3.news-item__title {
+  color: #000;
   display: inline;
   font-size: 0.93em;
   margin: 0;
   padding: 0;
 }
 
-.live-feeds-block .news-item img {
+.live-feeds-news .news-item .news-item__image {
   clear: left;
   float: left;
   margin-right: 10px;
 }
 
-.live-feeds-block .news-item .date {
+.live-feeds-news .news-item .news-item__date {
   color: #565656;
   display: inline;
   font-size: 0.93em;
@@ -34,7 +37,7 @@
   white-space: nowrap;
 }
 
-.live-feeds-block .news-item .news-body {
-  margin-top: .2em;
+.live-feeds-news .news-item .news-item__body {
   font-size: 0.93em;
+  margin-top: .2em;
 }
